apps/echoservice/k8s/echoservice-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: echoservice
  name: echoservice-deployment
spec:
  selector:
    matchLabels:
      app: echoservice
  replicas: 1
  template:
    metadata:
      labels:
        app: echoservice
        ltest: ltest
    spec:
      containers:
      - name: echoservice
        image: ocfork/echoservice:v0.1.1-rc 
        imagePullPolicy: Always
