apps/echoservice/k8s/echoservice-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: echoservice
  name: echoservice
  labels:
    app: echoservice
spec:
  type: ClusterIP
  selector:
    app: echoservice
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
