apps/echoservice/k8s/echoservice-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  namespace: echoservice
  name: echoservice-vs
  labels:
    app: echoservice
spec:
  gateways:
  - components/component-gateway
  hosts:
  - echoservice.ihc-dt.cluster-3.de
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: echoservice.echoservice.svc.cluster.local
        port:
          number: 80
      # https://github.com/envoyproxy/envoy/issues/4496
      headers:
        request:
          set:
            X-Forwarded-Proto: https
